2010-02-19	Sergey S. Sergeev

	* main/Base/CallChain.class.php: call() method fixed.

	* test/core/FiltersTest.class.php, test/main/Net/MailTest.class.php:
	test assertions added. 

	* main/Net/Mail/MailAddress.class.php: toString() method fixed.

2010-02-02	Evgeny V. Kokovikhin

	* main/Net/Http/Cookie.class.php: zero expire for cookie

2009-12-30	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: applyFunctorToCartesianProduct(): to apply
	function on each tuple of a cartesianProduct.

2009-12-29	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: getMmult(): added.

2009-12-22	Vladlen Y. Koshelev

	* main/Criteria/PropertyPath.class.php: correct handling of non-DAOConnected
	properties in path (e.g. ValueObject properties).

2009-12-21	Denis M. Gabaidulin

	* core/Base/PriorityQueue.class.php: simple priority queue impl. based
	on binary heap.

2009-12-19	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: getStandardDeviation(): calculate
	standard deviation.
	
	* main/Math/MathUtils.class.php: getAbsoluteDeviation(): calculate
	absolute deviation.
	
	* main/Math/MathUtils.class.php: getCovariance(): calculate
	covariance between two value arrays by formula:
	cov(X,Y) = sum((Xi-Xavg) * (Yj-Xavg) / n-1).

2009-11-25	Vladlen Y. Koshelev

	* main/OQL/Parsers/OqlGroupByParser.class.php: added support for logical,
	arithmetic and bindable expressions in group by clause.

2009-11-10	Denis M. Gabaidulin

	* main/DAOs/Workers/CustomDataScopedWorker.class.php: added worker
	to cache/uncache some scoped(by class, e.g.) data.

2009-11-05	Denis M. Gabaidulin

	* main/Base/StandardComparator.class.php: added.

2009-10-23	Sergey S. Sergeev

	* main/DAOs/ProtoDAO.class.php: fixed resolve path for ValueObjects.

	* meta/builders/AutoProtoClassBuilder.class.php,
	meta/classes/MetaClassProperty.class.php: ValueObject supports inheritance now.

	* meta/classes/MetaConfiguration.class.php: fixed check recursion for lazy objects.

2009-10-19	Denis M. Gabaidulin
